[workspace]
members = [
  "mwmr-core",
  "mwmr",
  "async-mwmr",
  "wmark",
  "skipdb",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.75.0"
repository = "https://github.com/al8n/txn"
homepage = "https://github.com/al8n/txn"
categories = ["asynchronous", "data-structures", "concurrency", "database-implementations", "development-tools"]
keywords = ["ssi", "transaction", "database", "optimistic", "mvcc"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
async-channel = "2"
cheap-clone = "0.1"
crossbeam-channel = { version = "0.5", default-features = false }
crossbeam-utils = { version = "0.8", default-features = false }
either = "1"
indexmap = { version = "2", default-features = false }
parking_lot = "0.12"
rand = "0.8"
smallvec-wrapper = { version = "0.1", features = ["const_new"] }
scopeguard = { version = "1", default-features = false }
thiserror = "1"
tracing = "0.1"

wmark = { path = "wmark", version = "0.2", default-features = false }
mwmr-core = { path = "mwmr-core", version = "0.2", default-features = false }

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]