[package]
name = "async-mwmr"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
description = "A runtime agnostic, WASM/WASI friendly, multi-writer-multi-reader MVCC, ACID, Serializable Snapshot Isolation transaction manager for database development."

[features]
default = []

# Features will export the generic unit tests implementation for database based on mwmr
test = ["rand"]

[dependencies]
async-channel.workspace = true
cheap-clone.workspace = true
crossbeam-utils.workspace = true
either.workspace = true
indexmap.workspace = true
parking_lot.workspace = true
scopeguard.workspace = true
smallvec-wrapper.workspace = true
thiserror.workspace = true
wmark = { workspace = true, features = ["future", "default"] }

rand = { workspace = true, optional = true }

[dev-dependencies]
rand.workspace = true

[[test]]
name = "async-mwmr"
path = "tests/main.rs"
required-features = ["test"]
