[package]
name = "async-mwmr"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
description = "A runtime agnostic, WASM/WASI friendly, multi-writer-multi-reader MVCC, ACID, Serializable Snapshot Isolation transaction manager for database development."

[features]
default = []

# Features will export the generic unit tests implementation for database based on mwmr
test = ["rand"]

async-std = ["wmark/async-std"]
smol = ["wmark/smol"]

[dependencies]
async-channel.workspace = true
cheap-clone.workspace = true
crossbeam-utils.workspace = true
either.workspace = true
indexmap.workspace = true
pollster = "0.3"
scopeguard = { workspace = true, features = ["use_std"] }
smallvec-wrapper.workspace = true
thiserror.workspace = true
wmark = { workspace = true, features = ["future", "default"] }
mwmr-core.workspace = true

rand = { workspace = true, optional = true }
futures = { version = "=0.3.29" }

[dev-dependencies]
rand.workspace = true
async-std = { version = "1", features = ["attributes"] }

[[test]]
name = "async-mwmr"
path = "tests/main.rs"
required-features = ["test"]
