[package]
name = "async-skipdb"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/async-skipdb"
description = "A blazing fast ACID, MVCC and SSI in memory database based on lock-free skiplist."
license.workspace = true

[features]
default = []

tokio = ["async-txn/tokio"]
smol = ["async-txn/smol"]
async-std = ["async-txn/async-std"]

[dependencies]
cheap-clone = "0.1"
crossbeam-skiplist = "0.1"
either = "1"
async-txn = { workspace = true, features = ["default"] }
scopeguard.workspace = true
skipdb-core.workspace = true

[dev-dependencies]
futures = "0.3"
rand = "0.8"
scopeguard = "1"
wmark = { workspace = true, features = ["future"] }
tokio = { version = "1", features = ["full"] }
async-std = { version = "1", features = ["attributes"] }
smol = "2"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
