[package]
name = "async-skipdb"
version = "0.1.3"
rust-version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/async-skipdb"
description = "An embedded, in-memory, ACID, MVCC, almost lock-free and serializable snapshot isolation database engine."
license.workspace = true
keywords = ["database", "key-value-store", "memdb", "embedded-database", "memodb"]
categories = ["database-implementations", "concurrency", "data-structures", "asynchronous"]

[features]
default = []

tokio = ["async-txn/tokio"]
smol = ["async-txn/smol"]
async-std = ["async-txn/async-std"]
wasm = ["async-txn/wasm"]

[dependencies]
cheap-clone = { workspace = true, features = ["std"] } 
async-txn = { workspace = true, features = ["default"] }
skipdb-core = { workspace = true, features = ["default"] }

[dev-dependencies]
futures = "0.3"
rand = "0.8"
scopeguard = "1"
wmark = { workspace = true, features = ["future"] }
tokio = { version = "1", features = ["full"] }
async-std = { version = "1", features = ["attributes"] }
smol = "2"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
