[package]
name = "async-txn"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
description = "A runtime agnostic, WASM/WASI friendly, multi-writer-multi-reader MVCC, ACID, Serializable Snapshot Isolation transaction manager for database development."

[features]
default = []

# Features will export the generic unit tests implementation for database based on txn
test = ["rand"]

async-std = ["wmark/async-std"]
smol = ["wmark/smol"]
tokio = ["wmark/tokio"]

[dependencies]
async-channel.workspace = true
cheap-clone.workspace = true
crossbeam-utils.workspace = true
either.workspace = true
indexmap.workspace = true
pollster = "0.3"
scopeguard = { workspace = true, features = ["use_std"] }
smallvec-wrapper.workspace = true
thiserror.workspace = true
wmark = { workspace = true, features = ["future", "default"] }
txn-core.workspace = true

rand = { workspace = true, optional = true }
futures = "0.3"

[dev-dependencies]
rand.workspace = true
async-std = { version = "1", features = ["attributes"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
