[package]
name = "mwmr-core"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
description = "The structs and traits for the `mwmr`, `async-mwmr`, and `tokio-mwmr` crates."

[features]
default = ["std"]
std = []

[dependencies]
cheap-clone.workspace = true
either.workspace = true
indexmap.workspace = true
smallvec-wrapper.workspace = true
