[package]
name = "mwmr"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
readme = "README.md"
description = "A generic optimistic transaction manger, which is ACID, concurrent with SSI (Serializable Snapshot Isolation)."

[features]
default = []
future = ["agnostic-lite"]

smol = ["agnostic-lite/smol", "future"]
tokio = ["agnostic-lite/tokio", "future"]
async-std = ["agnostic-lite/async-std", "future"]

# Features will export the generic unit tests implementation for database based on mwmr
test = ["rand"]

[dependencies]
agnostic-lite = { version = "0.1", default-features = false, optional = true }
cheap-clone.workspace = true
crossbeam-channel.workspace = true
crossbeam-utils.workspace = true
either.workspace = true
indexmap = { workspace = true, features = ["default"] }
parking_lot.workspace = true
scopeguard = { workspace = true, features = ["use_std"] }
smallvec-wrapper.workspace = true
thiserror.workspace = true
wmark = { workspace = true, features = ["default"] }
mwmr-core = { workspace = true, features = ["default"] }

rand = { workspace = true, optional = true }

[dev-dependencies]
rand.workspace = true

[[test]]
name = "mwmr"
path = "tests/main.rs"
required-features = ["test"]
