[package]
name = "skipdb-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
description = "The core for `skipdb` and `async-skipdb` crates"

[dependencies]
crossbeam-skiplist = "0.1"
either = "1"
txn-core.workspace = true
smallvec-wrapper.workspace = true