[package]
name = "skipdb-core"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
description = "The core for `skipdb` and `async-skipdb` crates"

[features]
default = ["std"]
std = ["smallvec-wrapper/std", "crossbeam-skiplist/default", "txn-core/std", "either/default"]

[dependencies]
crossbeam-skiplist = { version = "0.1", default-features = false }
either = { workspace = true, default-features = false }
txn-core = { workspace = true, default-features = false, features = ["alloc"] }
smallvec-wrapper.workspace = true