[package]
name = "skipdb"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/skipdb"
description = "A blazing fast ACID, MVCC and SSI in memory database based on lock-free skiplist."
license.workspace = true

[features]
default = []

[dependencies]
cheap-clone = "0.1"
txn = { workspace = true, features = ["default"] }
skipdb-core = { workspace = true, features = ["default"] }

[dev-dependencies]
rand = "0.8"
scopeguard = "1"
crossbeam-channel = "0.5"
wmark = "0.1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
