[package]
name = "skipdb"
version = "0.1.5"
rust-version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/skipdb"
description = "An embedded, in-memory, zero-copy, ACID, MVCC, almost lock-free and serializable snapshot isolation database engine."
license.workspace = true
keywords = ["database", "key-value-store", "memdb", "embedded-database", "memodb"]
categories = ["database-implementations", "concurrency", "data-structures"]

[features]
default = []

[dependencies]
cheap-clone = { workspace = true, features = ["std"] }
txn = { workspace = true, features = ["default"] }
skipdb-core = { workspace = true, features = ["default"] }

[dev-dependencies]
rand = "0.8"
scopeguard = "1"
crossbeam-channel = "0.5"
wmark.workspace = true 

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
