[package]
name = "tokio-mwmr"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
description = "A WASM/WASI friendly, multi-writer-multi-reader MVCC, ACID, Serializable Snapshot Isolation transaction manager for database development based on tokio."

[features]
default = []

# Features will export the generic unit tests implementation for database based on mwmr
test = ["rand"]

[dependencies]
cheap-clone.workspace = true
crossbeam-utils.workspace = true
either.workspace = true
indexmap.workspace = true
pollster = "0.3"
scopeguard = { workspace = true, features = ["use_std"] }
smallvec-wrapper.workspace = true
thiserror.workspace = true
wmark = { workspace = true, features = ["tokio", "default"] }
mwmr-core.workspace = true

rand = { workspace = true, optional = true }
tokio = { version = "1", default-features = false, features = ["rt", "sync"] }
futures = { version = "=0.3.29" }

[dev-dependencies]
rand.workspace = true
tokio = { version = "1", features = ["full"] }

[[test]]
name = "tokio-mwmr"
path = "tests/main.rs"
required-features = ["test"]
