[package]
name = "txn-core"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
description = "The structs and traits for the `txn` and `async-txn` crates."

[features]
default = ["std"]
std = []

[dependencies]
cheap-clone.workspace = true
either.workspace = true
indexmap.workspace = true
smallvec-wrapper.workspace = true
thiserror.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]