[package]
name = "wmark"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
description = "Helpful structs to implement optimistic SSI (Serializable Snapshot Isolation) level transactions for database"

[features]
default = ["std"]
std = ["parking_lot", "wg", "crossbeam-channel", "async-channel?/default", "thiserror", "crossbeam-utils/default", "scopeguard/use_std"]
core = ["crossbeam-queue/alloc", "hashbrown/allocator-api2"]
future = ["wg/future", "async-channel", "futures-util"]

[dependencies]
smallvec-wrapper.workspace = true
crossbeam-utils = { workspace = true, default-features = false }
scopeguard = { workspace = true, default-features = false }

thiserror = { version = "1", optional = true }

crossbeam-queue = { version = "0.3", optional = true, default-features = false }
hashbrown = { version = "0.14", optional = true, default-features = false }

crossbeam-channel = { version = "0.5", optional = true }
parking_lot = { version = "0.12", optional = true }
wg = { version = "0.7", optional = true }

async-channel = { version = "2", optional = true, default-features = false }
futures-util = { version = "=0.3.29", optional = true, default-features = false, features = ["async-await-macro"] }

tracing = { version = "0.1", optional = true, default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
